assets/css/style.css
#navBody{
    border-bottom: 4px solid #ddd;
    /* margin:0 auto; */
}
.pFooter {
    font-size: 10pt;
}

h1, h2 {
    font-family: 'Georgia', Times, Times New Roman, serif;
}

#imgText{
    width:100%;
    bottom:10px;
    /* position: absolute; */
}



@media screen and (max-width: 640px) {

    #navBody{
        width:100%;
        /* margin:0 auto; */
    }

    nav div.container{
        margin:0 auto;
        width:100%;
    }

    /* #navNameContainer{

        justify-content: center;
        width:100%;
        margin-left:0;
        margin-right:0;

    } */

    #nameContainer{
        margin-left:0;
        margin-right:0;
        justify-content: center;
    }
    #nameBg {
      width:100%;
      margin:0;
      text-align:center;
    }

    .navbar{
        margin:0 auto;
    }
}

